@startuml
skinparam linetype ortho

package repository {
    interface IBookRepository {
        + GetBookByISBN(long isbn): Task<Book?>
        + GetBooksByTitle(string title, int offset, int limit): Task<IEnumerable<Book>>
        + GetBooksByAuthor(string author, int offset, int limit): Task<IEnumerable<Book>>
        + GetBooksByGenre(BookGenre genre, int offset, int limit): Task<IEnumerable<Book>>
    }

    interface IPatronRepository {
        + GetPatronsByNameAsync(string name, int offset, int limit): Task<IEnumerable<Patron>>
        + GetPatronByMembershipAsync(long membership): Task<Patron?>
        + GetPatronByContactDetailsAsync(long contactDetails): Task<Patron?>
    }

    interface IBorrowRepository {
        + GetBorrowsByPatron(long membershipNumber, int offset, int limit): Task<IEnumerable<Borrow>>
        + GetBorrowsByBook(Guid bookId, int offset, int limit): Task<IEnumerable<Borrow>>
        + GetBorrowsByStatus(BorrowStatus status, int offset, int limit): Task<IEnumerable<Borrow>>
        + GetBorrowsByDueDate(DateTime dueDate, int offset, int limit): Task<IEnumerable<Borrow>>
        + GetBorrowsByBorrowDate(DateTime borrowDate, int offset, int limit): Task<IEnumerable<Borrow>>
        + UpdateBorrowStatus(Guid borrowId, BorrowStatus newStatus): Task<bool>
    }

    interface IRepository<T: IEntity> {
         Save(T entity): Task<bool>
         Update(T entity): Task<bool>
         Delete(long id): Task<bool>
         GetById(Guid id): Task<T?>
         GetAll(): Task<IEnumerable<T>>
    }
    IRepository <|.. IBookRepository
    IRepository <|.. IPatronRepository
    IRepository <|.. IBorrowRepository
}

IBookRepository --o DetailedBorrowFormatter
IBookRepository --o BorrowService
IBookRepository --o SearcherByAuthor
IBookRepository --o SearcherByGenre
IBookRepository --o SearcherByTitle

IBorrowRepository --o LoanSearcherByState
IBorrowRepository --o BorrowService
IBorrowRepository --o SearcherForLoansbyPatron

IPatronRepository --o SearcherByName
IPatronRepository --o BorrowService
IPatronRepository --o DetailedBorrowFormatter
@enduml

